# harmony

./: .dockerignore  .env.example  .gitignore  .prettierrc  README.md  README_UNWIRED_ANALYSIS.md  UNWIRED_FEATURES_DETAILED.md  UNWIRED_FEATURES_REPORT.md  UNWIRED_SUMMARY.txt  bunfig.toml  eslint.config.js  package.json
.github/workflows/: ci.yml  deploy.yml
backend/: package.json  prisma.config.ts  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: index.ts  router.ts
backend/src/auth/: admin-token.ts  hash.ts  jwt.ts  (+2 more)
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: generate.ts  icon.icns
desktop/src-tauri/src/: main.rs
docker/: docker-compose.dev.yml  docker-compose.yml
docker/app/: Dockerfile  start.sh
docker/app.dev/: Dockerfile  start.sh
docker/desktop/: Dockerfile  build.sh  docker-compose.build.yml
docker/media/: Dockerfile
docker/nginx/: nginx.conf  nginx.dev.conf
frontend/: package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html
media/: package.json  tsconfig.json
media/src/: api.ts  config.ts  consumer-manager.ts  index.ts  producer-manager.ts  router-manager.ts  transport-manager.ts  worker-pool.ts
scripts/: dev-setup.sh
shared/: package.json  tsconfig.json
shared/constants/: events.ts  index.ts  limits.ts  permissions.ts
shared/types/: api.ts  channel.ts  emoji.ts  index.ts  message.ts  notification.ts  role.ts  soundboard.ts  user.ts  voice.ts  ws-events.ts
shared/validation/: channel.ts  index.ts  message.ts  user.ts
(+108 files in other folders)
