[package]
name = "harmony-desktop"
version = "0.0.1"
description = "Harmony Desktop App"
authors = []
edition = "2021"

[lib]
name = "harmony_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
